# language-learner-assistant

./: .env.example  AGENTS.md  INSTRUCTIONS.md  README.md  app.py  pyproject.toml  run_streamlit.py
specs/: TEMPLATE.md  feat-answer-evaluation-spec.md  feat-exercise-generation-spec.md  feat-ui-creation-phase-spec.md  feat-ui-practice-phase-spec.md  feat-ui-review-phase-spec.md  feat-vocabulary-extraction-spec.md  mission.md  roadmap.md  tech-stack.md
src/language_learner/: __init__.py  config.py  exceptions.py  logging.py
src/language_learner/core/: __init__.py  application.py  langgraph_mistral_client.py  llm_client.py  llm_interface.py  mock_llm.py
src/language_learner/evaluation/: __init__.py  evaluator.py
src/language_learner/exercises/: __init__.py  generator.py  player.py
src/language_learner/exercises/agents/: __init__.py  exercise_creator.py  exercise_reviewer.py  exercise_workflow.py
src/language_learner/models/: __init__.py  exercise.py
src/language_learner/ui/: __init__.py  exercise_display.py  vocabulary_display.py
src/language_learner/web/: __init__.py  ner_filter.py  vocabulary_extractor.py
tests/: test_exercise_creator_agent.py  test_exercise_workflow_integration.py  test_feedback_flow.py  test_implementation.py  test_ner_filter.py  test_streamlit_display.py  test_vocabulary_extraction_integration.py  test_vocabulary_extractor.py
