[project]
name = "language-learner-assistant"
version = "0.1.0"
description = "A tool to help learn foreign languages"
dependencies = [
    "streamlit==1.55.0",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "nltk==3.9.3",
    "mistralai>=1.12.4",
    "pydantic-settings>=2.0.0",
    "spacy>=3.7.0",
    "fr-core-news-sm>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/language_learner"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.2",
    "ruff>=0.15.5",
]

[tool.uv.sources]
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
exclude = [".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
